@@ -1,4 +1,4 @@
 application/x-devhelp
-        _description=DevHelp Book
+        _description=Devhelp Book
         category=Documents
         icon_filename=devhelp.png
